# onenote-mcp

./: README.md  graph_auth.py  graph_client.py  ocr.py  pyproject.toml  server.py  vector_index.py
