[project]
name = "onenote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "numpy",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Vision; sys_platform == 'darwin'",
    "pyonenote @ git+https://github.com/delorfin/pyOneNote.git",
    "sentence-transformers",
]
